--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -11,7 +11,9 @@
 
 <body>
     <h1 class="h1 title glow" style="padding: 1cm; color:white">Doctor</h1>
-
+    <button (click)="openModal('mapModal')">
+      <i class="bi bi-map"></i> Hospital Map
+    </button>
     <div class="container">
 
         <div class="table-wrapper">
@@ -185,6 +187,131 @@
         </div>
     </div>
 
+
+    <div [ngStyle]="{'display': isModalOpen('mapModal') ? 'block' : 'none'}" id="mapModal" class="modal">
+      <div class="modal-content" style="height: 75vh;">
+          <span (click)="closeModal('mapModal')" class="close">&times;</span>
+          <div #canvasContainer class="canvas-container" id="canvasContainer">
+            <div id="parent" hidden>
+              <div id="views-panel" hidden>
+                <table class="views" hidden>
+                  <tr>
+                    <td>
+                      <label>View:</label>
+                      <select id="view">
+                        <option value="fixed">Fixed</option>
+                        <option value="first">First-person</option>
+                        <option value="third">Third-person</option>
+                        <option value="top">Top</option>
+                      </select>
+                    </td>
+                    <td>
+                      <label>Orientation (h):</label>
+                      <input type="number" id="horizontal" required>
+                    </td>
+                    <td>
+                      <label>Orientation (v):</label>
+                      <input type="number" id="vertical" required>
+                    </td>
+                    <td>
+                      <input type="button" id="reset" value="Reset view">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <label>Projection:</label>
+                      <select id="projection">
+                        <option value="perspective">Perspective</option>
+                        <option value="orthographic">Orthographic</option>
+                      </select>
+                    </td>
+                    <td>
+                      <label>Distance:</label>
+                      <input type="number" id="distance" required>
+                    </td>
+                    <td>
+                      <label>Zoom:</label>
+                      <input type="number" id="zoom" required>
+                    </td>
+                    <td>
+                      <input type="button" id="reset-all" value="Reset all views">
+                    </td>
+                  </tr>
+                </table>
+              </div>
+            
+              <div id="help-panel" hidden>
+                <table class="help" id="help-table">
+                  <tr>
+                    <th colspan="2" style="font-size: 3.0vmin">Help</th>
+                  </tr>
+                  <tr>
+                    <th colspan="2" style="text-align: left">Select active view</th>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td>Fixed view</td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td>First-person view</td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td>Third-person view</td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td>Top view</td>
+                  </tr>
+                  <tr>
+                    <th colspan="2" style="text-align: left">Toggle view mode</th>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td>Single-view mode / multiple-views mode</td>
+                  </tr>
+                </table>
+              </div>
+            
+              <div id="subwindows-panel" hidden>
+                <table class="subwindows">
+                  <tr>
+                    <td>
+                      <label>Multiple views:</label>
+                      <input type="checkbox" id="multiple-views">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <label>User interface:</label>
+                      <input type="checkbox" id="user-interface">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <label>Mini-map:</label>
+                      <input type="checkbox" id="mini-map">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <label>Help:</label>
+                      <input type="checkbox" id="help">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <label>Statistics:</label>
+                      <input type="checkbox" id="statistics">
+                    </td>
+                  </tr>
+                </table>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
