--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.scss
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.scss
@@ -247,3 +247,14 @@ table.table-striped.table-hover tbody tr:hover {
   transform: scale(1.1);
   transition: transform 0.3s, background-color 0.3s;
 }
+
+canvas {
+  display: block;
+}
+
+.canvas-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
