--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -11,8 +11,9 @@
 
 <body>
     <h1 class="h1 title glow" style="padding: 1cm; color:white">Doctor</h1>
-    <button (click)="openModal('mapModal')">
-      <i class="bi bi-map"></i> Hospital Map
+    <button id="mapButton" class="hospMapBtn" (click)="openModal('mapModal')">
+      Hospital Map 
+      <span class="icon">📍</span>
     </button>
     <div class="container">
 
@@ -189,7 +190,7 @@
 
 
     <div [ngStyle]="{'display': isModalOpen('mapModal') ? 'block' : 'none'}" id="mapModal" class="modal">
-      <div class="modal-content" style="height: 75vh;">
+      <div id="mapModalContent" class="modal-content" style="height: 75vh;">
           <span (click)="closeModal('mapModal')" class="close">&times;</span>
           <div #canvasContainer class="canvas-container" id="canvasContainer">
             <div id="parent" hidden>
@@ -312,6 +313,8 @@
         </div>
       </div>
     </div>
+
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
