--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -314,6 +314,11 @@
       </div>
     </div>
 
+    <div class="container-xxl">
+      <button class="btn-right" (click)="logout()">Logout</button>
+    </div>
+    
+
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
