--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <h1 class="h1 title glow" style="padding: 1cm; color:white">Doctor</h1>
-    <button id="mapButton" class="hospMapBtn" (click)="openModal('mapModal')">
+  <h1 class="h1 title glow" (click)="ngOnInit()" style="padding: 1cm; color:white"> Doctor </h1>
+  <button id="mapButton" class="hospMapBtn" (click)="openModal('mapModal')">
       Hospital Map 
       <span class="icon">📍</span>
     </button>
