--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -73,6 +73,15 @@
           </div>
         </div>
 
+
+        <div class="container col-md-4">
+          <div class="container-lg  selectionDiv" (click)="openModal('insertAllergies')">
+            <div class="form-floating mb-3">
+                <h3 class="title" >Insert Allergies</h3>
+            </div>
+          </div>
+        </div>
+
       </div>
 
 
@@ -1712,6 +1721,32 @@
 
           <button class="btn btn-primary" (click)="onUpdateOperationType()">Submit form</button>
         </div>
+      </form>
+  </div>
+</div>
+
+
+
+<div [ngStyle]="{'display': isModalOpen('insertAllergies') ? 'block' : 'none'}" id="insertAllergies" class="modal">
+  <div class="modal-content">
+      <span (click)="closeModal('insertAllergies')" class="close">&times;</span>
+      <form (ngSubmit)="onCreateOperationType(operationType)" class="row g-3 needs-validation" novalidate>
+         
+          <div class="col-md-6">
+            <label for="surgery" class="form-label">Designation</label>
+            <input type="text" class="form-control" id="surgery" [(ngModel)]="operationType.estimatedDuration.surgery" name="surgery" required step="2" />
+         </div>
+
+          <div class="col-md-6">
+              <label for="patientPreparation" class="form-label">Description</label>
+              <input type="text" class="form-control" id="patientPreparation" [(ngModel)]="operationType.estimatedDuration.patientPreparation" name="patientPreparation" required step="2" />
+          </div>
+
+          
+          <!-- Submit Button -->
+          <div class="col-12">
+              <button class="btn btn-primary" type="submit">Create Allergie</button>
+          </div>
       </form>
   </div>
 </div>
